--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,9 @@ set ( CMAKE_CXX_EXTENSIONS        OFF )
 
 set ( SOURCE
   src/main.cpp
+  src/color.h
+  src/vec3.h
+  src/ray.h
 )
 
 include_directories(src)
