--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ set ( SOURCE
     ${SRC_DIR}/hittable_list.h
     ${SRC_DIR}/sphere.h
     ${SRC_DIR}/rtweekend.h
+    ${SRC_DIR}/interval.h
 )
 
 source_group("Source Files" FILES ${SRC_DIR}/main.cpp)
